# portfolio-streamlit-app

./: .gitignore  CLAUDE.md  README.md  d6.py  requirements.txt  vercel.json
api/: analyze.py  backtest_for.py  health.py
api/core/: backtest.py  models.py  runner.py
backend/: README.md  main.py  models.py  pyproject.toml  requirements.txt
backend/core/: backtest.py  data.py  portfolio.py  presets.py  sml.py  ticker_master.py
frontend/: package-lock.json  package.json
frontend/public/: manifest.json  service-worker.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AnalyzeForm.tsx  AnalyzePanel.tsx  Header.tsx  TabShell.tsx  TypewriterTitle.tsx
frontend/src/app/components/charts/: BacktestChart.tsx  EfficientFrontierChart.tsx  PlotlyChart.tsx  WeightsPieChart.tsx
frontend/src/app/components/tabs/: BottomTabBar.tsx  HomeTab.tsx  LearnTab.tsx  ResultTab.tsx  ResultView.tsx  SettingsTab.tsx
frontend/src/app/privacy/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/components/: ServiceWorkerRegister.tsx  SplashScreen.tsx
frontend/src/lib/: api.ts  types.ts  useIsDark.ts  useIsMobile.ts
scripts/: generate_icons.py
